--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <header id="header">
         <div class="left-header">
             <span>butrinthajrizi.dev</span>
-            <input type="checkbox" class="dark-mode">
+            <input type="checkbox" class="input-checkbox">
+            <label for="checkbox" class="label">
+                <div class="ball"></div>
+            </label>
             <span>Dark Mode</span>
         </div>
         <div class="right-header">
