--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
     <header id="header">
         <div class="left-header">
             <span>butrinthajrizi.dev</span>
-            <input type="checkbox" class="input-checkbox">
-            <label for="checkbox" class="label">
-                <div class="ball"></div>
-            </label>
-            <span>Dark Mode</span>
+            <div class="toggle">
+                <div class="darkmode">
+                  <input type="checkbox" class="checkbox" id="checkbox">
+                  <label for="checkbox" class="label"></label>
+                    <div class="ball"></div>
+                  </label>
+                </div>
+              </div>
         </div>
         <div class="right-header">
             <a href="#header"><span>../home</span></a>
@@ -62,6 +65,11 @@
     <section class="social-networks" id="socials">
         <h3>my social networks;</h3>
         <p>I know they're not really social networks but hey I guess this is one way to contact me!</p>
+        <div class="socials">
+            <a href="https://www.linkedin.com/in/butrint-hajrizi-a13840245"><img src="/images/linkedin.png"></a>
+            <a href="mailto: butrinthajrizi1998@gmail.com"><img src="/images/email.png"></a>
+            <a href="https://github.com/butrinthajrizi"><img src="/images/github.png"></a>
+        </div>
     </section>
     <footer>
         <div class="footer-nav">
